Example project creation

--- a/jupyter/TaskDataFrame.ipynb
+++ b/jupyter/TaskDataFrame.ipynb
@@ -90,9 +90,37 @@
     "import pandas\n",
     "\n",
     "# Retrieve tasks from ProjectManager and import them into a Pandas DataFrame\n",
-    "tasks = client.task.query_tasks(None, None, None, None, None, None)\n",
+    "tasks = client.task.query_tasks(None, None, None, None, None)\n",
     "df = pandas.DataFrame(tasks.data)\n",
     "df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "# Create a project\n",
+    "-----\n",
+    "\n",
+    "This code demonstrates how to create a new project\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "# Information about a new project to create\n",
+    "new_project = ProjectManagerSdk.ProjectCreateDto()\n",
+    "new_project.name = \"New Project\"\n",
+    "new_project.description = \"This is my project description\"\n",
+    "\n",
+    "# Retrieve tasks from ProjectManager and import them into a Pandas DataFrame\n",
+    "client.project.create_project(new_project)\n"
    ]
   }
  ],
